--- a/assignment2.html
+++ b/assignment2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Second Assignment</title>
+    <title>ALLAH</title>
     <script src="https://kit.fontawesome.com/cfb0fc23d9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
